tests/ui/macros/issue-19163.stderr
error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/issue-19163.rs:9:14
   |
LL |     mywrite!(&v, "Hello world");
   |              ^^ cannot borrow as mutable
   |
   = help: `&v` is of type `&std::vec::Vec<u8>`, which is an immutable reference

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
